# eng-rag

./: .env.example  .gitignore  .worktreeinclude  00_PROJECT_OVERVIEW.md  03_INGESTION.md  04_INDEXING.md  06_API.md  07_EVALUATION.md  CLAUDE.md  START_HERE.md  docker-compose.yml  main.py  pyproject.toml
docs/: 01_ARCHITECTURE.md  02_SETUP.md  05_RETRIEVAL.md  08_RAG_TECHNOLOGY_DEEP_DIVE.md  schema.sql
scripts/: e2e_test.py  init_db.py  verify_parse.py
src/api/: __init__.py  documents.py  health.py  query.py  ui.py
src/common/: qdrant_client.py
src/indexing/: __init__.py  indexing_pipeline.py  page_indexer.py  qdrant_setup.py  vector_indexer.py
src/ingestion/: __init__.py  block_classifier.py  layout_parser.py  pipeline.py  section_aggregator.py  sql_saver.py
src/retrieval/: __init__.py  query_classifier.py  reranker.py  search_engine.py  sql_tool.py  tree_tool.py  vector_tool.py
tests/: test_ingestion.py
